resources/tribe-events-full.css
/* ... */
.tribe-select2-results-views span.tribe-icon-list,
.tribe-bar-views-list span.tribe-icon-list,
.tribe-bar-view-list span[class^="tribe-icon-"] {
	background-image: url(images/events-bar/icon-list.png);
	-webkit-background-size: 15px 10px;
    		background-size: 15px 10px;
}
.tribe-bar-view-list a.tribe-icon-list,
.tribe-bar-view-list a.tribe-icon-month {
	padding-left: 30px;
	background-position: 10px 50%;
}

.tribe-select2-results-views .tribe-icon-month,
.tribe-bar-views-list span.tribe-icon-month,
.tribe-bar-view-list a.tribe-icon-month {
	background-image: url(images/events-bar/icon-month.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}
.tribe-select2-results-views span.tribe-icon-week,
.tribe-bar-views-list span.tribe-icon-week {
	background-image: url(images/events-bar/icon-week.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}
.tribe-select2-results-views span.tribe-icon-day,
.tribe-bar-views-list span.tribe-icon-day {
	background-image: url(images/events-bar/icon-day.png);
	-webkit-background-size: 15px 16px;
    		background-size: 15px 16px;
}
.tribe-select2-results-views span.tribe-icon-photo,
.tribe-bar-views-list span.tribe-icon-photo {
	background-image: url(images/events-bar/icon-photo.png);
	-webkit-background-size: 15px 14px;
    		background-size: 15px 14px;
}
.tribe-select2-results-views span.tribe-icon-map,
.tribe-bar-views-list span.tribe-icon-map {
	background-image: url(images/events-bar/icon-map.png);
	-webkit-background-size: 12px 16px;
    		background-size: 12px 16px;
	background-position: 2px 50%;
}

/* ==========================================================================
  Theme Compatibility
   ========================================================================== */

/* Twenty Fourteen
========================================================================== */
.tribe-events-week.tribe-theme-twentyfourteen #masthead,
.tribe-events-week.tribe-theme-parent-twentyfourteen #masthead {
	z-index: 1001;
}
.tribe-theme-twentyfourteen #tribe-events-pg-template #tribe-events,
.tribe-theme-parent-twentyfourteen #tribe-events-pg-template #tribe-events {
	padding: 20px;
}
.tribe-theme-twentyfourteen #tribe-bar-views .tribe-bar-views-list,
.tribe-theme-parent-twentyfourteen #tribe-bar-views .tribe-bar-views-list {
	z-index: 3;
}
@media screen and (min-width: 1000px) {
	.tribe-theme-twentyfourteen #tribe-events-pg-template,
	.tribe-theme-parent-twentyfourteen #tribe-events-pg-template {
		padding-left: 220px;
	}
}
/* Stop themes from hiding elements with the .updated CSS class */
#tribe-events-content .updated {
	display: inherit;
}

/* Twenty Fifteen
========================================================================== */
.tribe-theme-twentyfifteen.events-single.tribe-events-page-template #tribe-events-pg-template {
	padding-top: 8.3333%;
}
.tribe-theme-twentyfifteen.events-single.tribe-events-page-template #tribe-events-content {
	padding: 8.3333% 10%;
}
.tribe-theme-twentyfifteen.single-tribe_events.page-template-page-php .tribe-events-single {
	box-shadow: none;
	margin-left: 0;
	margin-right: 0;
	margin-bottom: 0 !important;
}

/* = Events Retina
=============================================*/
@media 
(min--moz-device-pixel-ratio: 2),
(-o-min-device-pixel-ratio: 2/1),
(-webkit-min-device-pixel-ratio: 2),
(min-device-pixel-ratio: 2) {
	.tribe-events-tooltip .tribe-events-arrow {
		background-image: url(images/tribe-tooltips@2x.png);
	}
	#tribe-bar-filters .tribe-bar-button-search .tribe-bar-btn-small {
		background-image: url(images/events-bar/icon-search@2x.png);
	}
	#tribe-events-bar .tribe-bar-button-settings span {
		background-image: url(images/events-bar/icon-gear@2x.png);
	}
	#tribe-events-bar [class^="tribe-bar-button-"]:after {
		background-image: url(../vendor/select2/select2x2.png);
	}
	/* Default icon */
	.tribe-select2-results-views span[class^="tribe-icon-"],
	.tribe-bar-views-list span[class^="tribe-icon-"],
	.tribe-bar-view-list a[class^="tribe-icon-"] {
		background-image: url(images/events-bar/icon-month@2x.png);
	}	
	.tribe-select2-results-views span.tribe-icon-list,
	.tribe-bar-views-list span.tribe-icon-list,
	.tribe-bar-view-list span[class^="tribe-icon-"] {
		background-image: url(images/events-bar/icon-list@2x.png);
	}
	.tribe-select2-results-views span.tribe-icon-month,
	.tribe-bar-views-list span.tribe-icon-month,
	.tribe-bar-view-list a.tribe-icon-month {
		background-image: url(images/events-bar/icon-month@2x.png);
	}
	.tribe-select2-results-views span.tribe-icon-week,
	.tribe-bar-views-list span.tribe-icon-week {
		background-image: url(images/events-bar/icon-week@2x.png);
	}
	.tribe-select2-results-views span.tribe-icon-day,
	.tribe-bar-views-list span.tribe-icon-day {
		background-image: url(images/events-bar/icon-day@2x.png);
	}
	.tribe-select2-results-views span.tribe-icon-photo,
	.tribe-bar-views-list span.tribe-icon-photo {
		background-image: url(images/events-bar/icon-photo@2x.png);
	}
	.tribe-select2-results-views span.tribe-icon-map,
	.tribe-bar-views-list span.tribe-icon-map {
		background-image: url(images/events-bar/icon-map@2x.png);
	}
}

